tests/paczka1/fuzzy1/23250772.err
Error in line 1: srgh8RXooX8 S297 33,8
Error in line 9: oDfT5Od A761 64,6
Error in line 12: oDfT5Od S789 61,0
Error in line 19: BeYGJCmKAQm S297 31,6
Error in line 38: YYx A761 84,1
